# virtpy

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: rust.yml
pip_shim/: gen_zip_archive.py
pip_shim/pip/: __init__.py  __main__.py
poetry_plugin_virtpy/: README.md  poetry.toml  pyproject.toml
poetry_plugin_virtpy/src/poetry_plugin_virtpy/: plugin.py
src/: internal_store.rs  main.rs  my_fs_err.rs  prelude.rs  python.rs  python_detection.rs  python_requirements.rs  python_wheel.rs  requirements_txt.pest  venv.rs
src/python/: detection.rs  requirements.rs  wheel.rs
test_files/: new_installed_distributions.json  old_installed_distributions.json  requirements.txt
test_files/distribution_metadata/: PySide6-6.4.3.METADATA  PySide6_Addons-6.4.3.METADATA  PySide6_Essentials-6.4.3.METADATA  avro_validator-1.0.9.METADATA  lazy_object_proxy-1.8.0.METADATA  meson-0.62.1.METADATA  mizani-0.8.1.METADATA  node_semver-0.6.1.METADATA  patch_ng-1.17.4.METADATA  pkg_resources-0.0.0.METADATA  pluginbase-1.0.1.METADATA  pynvml-11.4.1.METADATA  shiboken6-6.4.3.METADATA  snakeviz-2.1.1.METADATA  tuna-0.5.11.METADATA  typed_dict_generator-0.2.1.METADATA  types_PySide2-5.15.2.1.5.METADATA
test_files/foo-1.0.data/scripts/: rewrite_me.py
test_files/wheel_records/: Flask-1.1.2.RECORD  Jinja2-2.11.2.RECORD  MarkupSafe-1.1.1.RECORD  MarkupSafe-2.0.1.RECORD  Pillow-8.0.1.RECORD  Pillow-8.2.0.RECORD  Pygments-2.6.1.RECORD  Pygments-2.7.1.RECORD  Pygments-2.7.2.RECORD  QtPy-1.9.0.RECORD  Send2Trash-1.5.0.RECORD  Werkzeug-1.0.1.RECORD  appdirs-1.4.4.RECORD  argcomplete-1.12.3.RECORD  argon2_cffi-20.1.0.RECORD  astroid-2.4.2.RECORD  astroid-2.5.6.RECORD  async_generator-1.10.RECORD  attrs-19.3.0.RECORD  attrs-20.2.0.RECORD  attrs-21.2.0.RECORD  backcall-0.2.0.RECORD  beautifulsoup4-4.9.2.RECORD  black-20.8b1.RECORD  bleach-3.2.1.RECORD  bottle-0.12.19.RECORD  certifi-2020.12.5.RECORD  cffi-1.14.3.RECORD  chardet-4.0.0.RECORD  click-7.1.2.RECORD  click-8.0.1.RECORD  colorama-0.4.4.RECORD  conan-1.36.0.RECORD  dataclasses-0.6.RECORD  decorator-4.4.2.RECORD  defusedxml-0.6.0.RECORD  deprecation-2.0.7.RECORD  distro-1.5.0.RECORD  entrypoints-0.3.RECORD  fasteners-0.16.RECORD  (+93 more)
test_files/wheels/: result-0.6.0-py3-none-any.whl
test_files/wheels/validity_check_invalid_wheel/: wheel_test_package-0.1.0-py3-none-any.whl
test_files/wheels/validity_check_valid_wheel/: wheel_test_package-0.1.0-py3-none-any.whl
windows_exe_wrappers/: note.txt
