[package]
name = "virtpy"
version = "0.1.0"
authors = ["Emerentius <emerentius@arcor.de>"]
edition = "2018"

[dependencies]
structopt = "0.3.16"
directories = "3.0.1"
pest = "2.1.3"
pest_derive = "2.1.0"
json = "0.12.4"
tempdir = "0.3.7"
regex = "1.3.9"
walkdir = "2.3.1"
toml_edit = "0.2.0"
serde = { version = "1.0.115", features = ["derive"] }
csv = "1.1.3"
scopeguard = "1.1.0"
rust-ini = "0.15.3"
