[package]
name = "virtpy"
version = "0.2.0"
authors = ["Emerentius <emerentius@arcor.de>"]
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
directories = "4.0.1"
tempdir = "0.3.7"
regex = "1.5.4"
walkdir = "2.3.2"
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1.6"
scopeguard = "1.1.0"
rust-ini = "0.17.0"
pathsearch = "0.2.0"
serde_json = "1.0.71"
rand = "0.8.4"
sha2 = "0.9.8"
base64 = "0.13.0"
eyre = "0.6.6"
color-eyre = "0.5.11"
fs-err = "2.6.0"
zip = "0.5.13"
fs2 = "0.4.3"
itertools = "0.10.1"
lazy-regex = "2.2.2"
base16 = "0.2.1"
camino = { version = "1.0.5", features = ["serde1"] }
bytesize = "1.1.0"
thiserror = "1.0.30"
configparser = "3.0.0"
glob = "0.3.0"
clap = { version = "3.1.18", features =["derive"] }

[profile.release]
debug = true

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
assert_cmd = "2.0.2"
escargot = "0.5.6"
serial_test = "0.5.1"
