[tool.poetry]
name = "virtpy"
version = "0.1.0"
description = ""
authors = ["Emerentius <emerentius@arcor.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.902"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
